--- a/profes.html
+++ b/profes.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet" />
         <style>
             .idea{
-                weith:100%;
+                width:100%;
                 clear:both;
                 margin-left: -0.75rem;
             }
